[java] Add JDK25 support
Add support for building and running the Java modules on JDK25 while
preserving JDK17 compatibility.

* FakeDNS: rework the test DNS override to also drive the JDK25
  java.net.spi.InetAddressResolver SPI (lookupByName / lookupByAddress),
  falling back to the Java 9+ InetAddress$NameService path and the
  Java 8 sun.net.spi.nameservice.NameService path. The existing
  --add-opens=java.base/java.net in gradle/tests.gradle already covers
  the reflective field access on all of these paths. The Java 9+ path
  catches only the expected ReflectiveOperationException /
  InaccessibleObjectException so genuine programming errors surface
  instead of being treated as "try the next JDK path".
* Spark KuduContext: obtain the login/current user via Hadoop's
  UserGroupInformation (loginUserFromKeytabAndReturnUGI when a principal
  and keytab are configured, otherwise getCurrentUser) and run the
  authentication-credentials export via UGI.doAs. This replaces the
  previous javax.security.auth.Subject.getSubject()/Subject.doAs() and
  manual LoginContext usage, which are disabled/deprecated on newer JDKs,
  and does so without reflecting into JDK internals -- UGI encapsulates
  the JDK17-vs-JDK18+ differences in how the current Subject is obtained.
* Bump Hadoop to 3.4.3 for its newer JAAS/Subject compatibility fixes:
  3.4.x obtains the current Subject via Subject.current() on JDK18+,
  whereas 3.4.1 still calls the JDK18+-removed Subject.getSubject().
  Spark 3.5.x bundles an older hadoop-client (3.3.x), so force the
  hadoop-client-api / hadoop-client-runtime artifacts to the project
  Hadoop version wherever Spark is on the classpath: kudu-spark and
  kudu-spark-tools via the root build.gradle resolutionStrategy, and
  kudu-backup (which excludes hadoop-common and would otherwise ride
  Spark's older client) via its own resolutionStrategy. Without this,
  SparkContext initialization fails on JDK17+ with
  "UnsupportedOperationException: getSubject is